--- a/ProjectGameSDL2/ProjectGameSDL2.vcxproj
+++ b/ProjectGameSDL2/ProjectGameSDL2.vcxproj
@@ -141,17 +141,19 @@
     <ClCompile Include="BaseObject.h" />
     <ClCompile Include="BulletObject.cpp" />
     <ClCompile Include="CommonFunc.cpp" />
-    <ClCompile Include="game_map.cpp" />
     <ClCompile Include="ImpTimer.cpp" />
-    <ClCompile Include="ImpTimer.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainObject.cpp" />
-    <ClCompile Include="MainObject.h" />
+    <ClCompile Include="ThreatToHouse.cpp" />
+    <ClCompile Include="ThreatToMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BulletObject.h" />
     <ClInclude Include="CommonFunc.h" />
-    <ClInclude Include="game_map.h" />
+    <ClInclude Include="ImpTimer.h" />
+    <ClInclude Include="MainObject.h" />
+    <ClInclude Include="ThreatToHouse.h" />
+    <ClInclude Include="ThreatToMain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
