--- a/ProjectGameSDL2/ProjectGameSDL2.vcxproj.filters
+++ b/ProjectGameSDL2/ProjectGameSDL2.vcxproj.filters
@@ -27,19 +27,16 @@
     <ClCompile Include="BaseObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="game_map.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MainObject.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="MainObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ImpTimer.h">
-      <Filter>Header Files</Filter>
+    <ClCompile Include="ThreatToHouse.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ImpTimer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ThreatToMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BulletObject.cpp">
@@ -50,7 +47,16 @@
     <ClInclude Include="CommonFunc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="game_map.h">
+    <ClInclude Include="MainObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreatToHouse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ImpTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreatToMain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BulletObject.h">
